# enumn

./: .travis.yml  Cargo.toml  README.md  tea  tea.yaml
.github/workflows/: ci.yml  rust.yml
src/: lib.rs
tests/: test.rs
