[package]
name = "enumn"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Convert number to enum"
repository = "https://github.com/dtolnay/enumn"
documentation = "https://docs.rs/enumn"
readme = "README.md"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "dtolnay/enumn" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
