[package]
name = "enumn"
version = "0.1.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
rust-version = "1.31"
license = "MIT OR Apache-2.0"
description = "Convert number to enum"
repository = "https://github.com/dtolnay/enumn"
documentation = "https://docs.rs/enumn"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
